[gd_scene load_steps=14 format=3]

[ext_resource type="Script" path="res://scripts/agent.gd" id="1_0"]
[ext_resource type="PackedScene" path="res://scenes/Eyes.tscn" id="1_1"]
[ext_resource type="Script" path="res://scripts/vision_caster.gd" id="1_2"]

[sub_resource type="BoxMesh" id="2_0"]
size = Vector3(2.0, 2.0, 2.0)

[sub_resource type="CapsuleShape3D" id="3_0"]
radius = 0.4
height = 0.8

[sub_resource type="SphereShape3D" id="4_0"]
radius = 0.9


[sub_resource type="ParticleProcessMaterial" id="6_0"]
emission_shape = 0
spread = 180.0
gravity = Vector3(0, -0.2, 0)
initial_velocity = 0.4
scale = 0.15
scale_random = 0.1
color = Color(0.5, 0.85, 1, 0.65)
color_ramp = null
lifetime_randomness = 0.2

[node name="Agent" type="CharacterBody3D"]
script = ExtResource("1_0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("2_0")
translation = Vector3(0, 1.0, 0)

; Outline temporarily disabled for clarity

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("3_0")
translation = Vector3(0, 0.4, 0)

[node name="TagArea" type="Area3D" parent="."]
monitorable = true
monitoring = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="TagArea"]
shape = SubResource("4_0")
translation = Vector3(0, 1.1, 0)

[node name="Eyes" parent="." instance=ExtResource("1_1")]
translation = Vector3(0, 0, 0)

[node name="VisionCaster" type="Node3D" parent="."]
script = ExtResource("1_2")

[node name="FootL" type="MeshInstance3D" parent="."]
mesh = SubResource("2_0")
scale = Vector3(0.3, 0.15, 0.3)
translation = Vector3(-0.2, 0.15, 0.2)

[node name="FootR" type="MeshInstance3D" parent="."]
mesh = SubResource("2_0")
scale = Vector3(0.3, 0.15, 0.3)
translation = Vector3(0.2, 0.15, 0.2)

[node name="TrailParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 64
process_material = SubResource("6_0")

[node name="HaloLight" type="OmniLight3D" parent="."]
light_color = Color(0.35, 0.8, 1, 1)
light_energy = 1.1
light_indirect_energy = 0.9
light_specular = 1.3
omni_range = 6.0
shadow_enabled = true
shadow_bias = 0.01
translation = Vector3(0, 1.2, 0)

[node name="RoleLabel" type="Label3D" parent="."]
text = "AGENT"
pixel_size = 0.01
modulate = Color(0.8, 0.95, 1, 0.92)
outline_size = 0.05
outline_modulate = Color(0, 0, 0, 1)
translation = Vector3(0, 1.2, 0)
